--- a/src/assets/scss/_themes-vars.module.scss
+++ b/src/assets/scss/_themes-vars.module.scss
@@ -1,9 +1,9 @@
 // paper & background
-$paper: #ffffff;
+$paper: #161616;
 
 // primary
 $primaryLight: #e3f2fd;
-$primaryMain: #2196f3;
+$primaryMain: #f37521;
 $primaryDark: #1e88e5;
 $primary200: #90caf9;
 $primary800: #1565c0;
