CRUD de clientes y teminales completado

--- a/src/assets/scss/_themes-vars.module.scss
+++ b/src/assets/scss/_themes-vars.module.scss
@@ -1,12 +1,12 @@
 // paper & background
-$paper: #161616;
+$paper: #131313;
 
 // primary
-$primaryLight: #e3f2fd;
-$primaryMain: #f37521;
-$primaryDark: #1e88e5;
-$primary200: #90caf9;
-$primary800: #1565c0;
+$primaryLight: #b9f6ca;
+$primaryMain: #00e676;
+$primaryDark: #00c853;
+$primary200: #69f0ae;
+$primary800: #0b6c3d;
 
 // secondary
 $secondaryLight: #ede7f6;
