--- a/src/assets/scss/_themes-vars.module.scss
+++ b/src/assets/scss/_themes-vars.module.scss
@@ -10,7 +10,7 @@ $primary800: #0b6c3d;
 
 // secondary
 $secondaryLight: #ede7f6;
-$secondaryMain: #673ab7;
+$secondaryMain: #7d4fcb;
 $secondaryDark: #5e35b1;
 $secondary200: #b39ddb;
 $secondary800: #4527a0;
