Reducer a clientes para mejor renderizado en los cambios, modificacion en ventana de Login

--- a/src/assets/scss/_themes-vars.module.scss
+++ b/src/assets/scss/_themes-vars.module.scss
@@ -7,6 +7,18 @@ $primaryMain: #00e676;
 $primaryDark: #00c853;
 $primary200: #69f0ae;
 $primary800: #0b6c3d;
+// $primaryLight: #03a9f4;
+// $primaryMain: #0288d1;
+// $primaryDark: #01579b;
+// $primary200: #017FDF;
+// $primary800: #014F79;
+/*
+$primaryLight: #C2DCFF;
+$primaryMain: #2e88fe;
+$primaryDark: #006fff;
+$primary200: #71AEFE;
+$primary800: #0056c7
+*/
 
 // secondary
 $secondaryLight: #ede7f6;
