--- a/src/assets/scss/_themes-vars.module.scss
+++ b/src/assets/scss/_themes-vars.module.scss
@@ -1,24 +1,12 @@
 // paper & background
-$paper: #131313;
+$paper: #ebebeb;
 
 // primary
-$primaryLight: #b9f6ca;
-$primaryMain: #00e676;
-$primaryDark: #00c853;
-$primary200: #69f0ae;
-$primary800: #0b6c3d;
-// $primaryLight: #03a9f4;
-// $primaryMain: #0288d1;
-// $primaryDark: #01579b;
-// $primary200: #017FDF;
-// $primary800: #014F79;
-/*
-$primaryLight: #C2DCFF;
-$primaryMain: #2e88fe;
-$primaryDark: #006fff;
-$primary200: #71AEFE;
-$primary800: #0056c7
-*/
+$primaryLight: #03a9f4;
+$primaryMain: #0288d1;
+$primaryDark: #01579b;
+$primary200: #017FDF;
+$primary800: #014F79;
 
 // secondary
 $secondaryLight: #ede7f6;
@@ -43,6 +31,11 @@ $orangeLight: #fbe9e7;
 $orangeMain: #ffab91;
 $orangeDark: #d84315;
 
+// rose
+$roseLight: #FFADC2;
+$roseMain: #FF7B9C;
+$roseDark: #FF4775;
+
 // warning
 $warningLight: #fff8e1;
 $warningMain: #ffe57f;
@@ -62,19 +55,19 @@ $grey900: #212121;
 // ==============================|| DARK THEME VARIANTS ||============================== //
 
 // paper & background
-$darkBackground: #1a223f; // level 3
-$darkPaper: #111936; // level 4
+$darkBackground: #000000; // level 3
+$darkPaper: #131313; // level 4
 
 // dark 800 & 900
 $darkLevel1: #29314f; // level 1
 $darkLevel2: #212946; // level 2
 
 // primary dark
-$darkPrimaryLight: #e3f2fd;
-$darkPrimaryMain: #2196f3;
-$darkPrimaryDark: #1e88e5;
-$darkPrimary200: #90caf9;
-$darkPrimary800: #1565c0;
+$darkPrimaryLight: #b9f6ca;
+$darkPrimaryMain: #00e676;
+$darkPrimaryDark: #00c853;
+$darkPrimary200: #69f0ae;
+$darkPrimary800: #0b6c3d;
 
 // secondary dark
 $darkSecondaryLight: #d1c4e9;
@@ -84,9 +77,9 @@ $darkSecondary200: #b39ddb;
 $darkSecondary800: #6200ea;
 
 // text variants
-$darkTextTitle: #d7dcec;
-$darkTextPrimary: #bdc8f0;
-$darkTextSecondary: #8492c4;
+$darkTextTitle: #fafafa;
+$darkTextPrimary: #bdbdbd;
+$darkTextSecondary: #757575;
 
 // ==============================|| JAVASCRIPT ||============================== //
 
@@ -123,6 +116,11 @@ $darkTextSecondary: #8492c4;
     orangeLight: $orangeLight;
     orangeMain: $orangeMain;
     orangeDark: $orangeDark;
+
+    // orange
+    roseLight: $roseLight;
+    roseMain: $roseMain;
+    roseDark: $roseDark;
 
     // warning
     warningLight: $warningLight;
