--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -388,7 +388,7 @@ input:-webkit-autofill:hover,
 input:-webkit-autofill:focus, 
 input:-webkit-autofill:active{
     -webkit-background-clip: text;
-    -webkit-text-fill-color: #ffffff;
+    -webkit-text-fill-color: #898989;
     transition: background-color 5000s ease-in-out 0s;
-    box-shadow: inset 0 0 20px 20px #23232329;
+    box-shadow: inset 0 0 20px 20px #ffffff10 !important;
 }
