--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -273,6 +273,64 @@
     }
 }
 
+@keyframes blinkNeon {
+    78% {
+      box-shadow: inherit;
+    }
+    80% {
+      box-shadow: none;
+    }
+    81% {
+      box-shadow: inherit;
+    }
+    82% {
+        box-shadow: none;
+    }
+    83% {
+      box-shadow: inherit;
+    }
+    91% {
+        box-shadow: none;
+    }
+    92% {
+      box-shadow: inherit;
+    }
+  }
+
+  @-webkit-keyframes pulse {
+    0% {
+      -webkit-box-shadow: 0 0 0 0 rgba(204,169,44, 0.4);
+    }
+    70% {
+        -webkit-box-shadow: 0 0 0 10px rgba(204,169,44, 0);
+    }
+    100% {
+        -webkit-box-shadow: 0 0 0 0 rgba(204,169,44, 0);
+    }
+  }
+  @keyframes pulse {
+    0% {
+      -moz-box-shadow: 0px 0px 300px 300px rgba($grey700, 0.04);
+      box-shadow: 0px 0px 300px 300px rgba($grey700, 0.04)
+    }
+    25% {
+        -moz-box-shadow: 0px 0px 250px 250px rgba($grey700, 0.04);
+      box-shadow: 0px 0px 250px 250px rgba($grey700, 0.04)
+    }
+    50% {
+        -moz-box-shadow: 0px 0px 300px 300px rgba($grey700, 0.04);
+      box-shadow: 0px 0px 300px 300px rgba($grey700, 0.04)
+    }
+    75% {
+        -moz-box-shadow: 0px 0px 250px 250px rgba($grey700, 0.04);
+      box-shadow: 0px 0px 250px 250px rgba($grey700, 0.04)
+    }
+    100% {
+        -moz-box-shadow: 0px 0px 300px 300px rgba($grey700, 0.04);
+      box-shadow: 0px 0px 300px 300px rgba($grey700, 0.04)
+    }
+  }
+
 @keyframes floating {
     0% {
         transform: translate(0, 0px);
