Ventana de Mapa por nombre de cliente

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -231,6 +231,13 @@
     }
 }
 
+.label-map {
+    margin-top: 65px;
+    font-weight: 500;
+    background-color: $darkPaper;
+    padding: 5px;
+}
+
 // Custom Scroll Bar
 
 ::-webkit-scrollbar {
